nfl-tip-game/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfl-tip-game
  namespace: nfl-tip-game
  labels:
    app: nfl-tip-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfl-tip-game
  template:
    metadata:
      labels:
        app: nfl-tip-game
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: nfl-tip-game
        image: registry.flou.dev/nfl-tip-game:7cee9777-5209-4bb8-bcaf-a9ed554623f9
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: nfl-tip-game
  namespace: nfl-tip-game
spec:
  selector:
    app: nfl-tip-game
  ports:
    - port: 8000
      targetPort: 8000
      name: api
