nfl-tip-game/k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: nfl-tip-game
  labels:
    app: postgres
spec:
  replicas: 1
  serviceName: postgres
  updateStrategy: 
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: vol
            subPath: data
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: nfl-tip-game-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nfl-tip-game
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
