nfl-tip-game/k8s/webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: nfl-tip-game
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: webui
        image: sosedoff/pgweb
        ports:
          - containerPort: 8081
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: nfl-tip-game
spec:
  selector:
    app: webui
  ports:
    - port: 8081
      targetPort: 8081
      name: api
