nfl-tip-game/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfl-ingress
  namespace: nfl-tip-game
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nfl-game.songvoter.party
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nfl-tip-game
            port:
              number: 8000
  - host: nfl-db.songvoter.party
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webui
            port:
              number: 8081
